src/lib/snapshots/hemlis_lib__parser__tests__empty_string.snap
---
source: src/parser.rs
expression: "p_module(\"\")"
---
2 of 1
===
Module
 NULL
===
Unexpected(Known(Fi(0), (0, 0), (0, 0)), None, "T::Lower(\"module\")")
