src/lib/snapshots/hemlis_lib__parser__tests__everything_header.snap
---
source: src/lib/parser.rs
expression: "p_module(r#\"\nmodule A.B.C (a, class B, C, D(..), E(F, G), \n (+), type (+), module H) where\n\nimport A\nimport A as A\nimport A.B.C as A.C\nimport A.B.C (a, class B, \n C, D(..), E(F, G), (+), type (+))\nimport A.B.C hiding (foo)\n        \"#)"
---
81 of 81
===
Module
 Header
  MName
   (1, 7)->(1, 12)
   Export::Value
    Name
     (1, 14)->(1, 15)
   Export::Class
    ProperName
     (1, 23)->(1, 24)
   Export::Typ
    ProperName
     (1, 26)->(1, 27)
   Export::TypDat
    ProperName
     (1, 29)->(1, 30)
    DataMember::All
     (1, 30)->(1, 34)
   Export::TypDat
    ProperName
     (1, 36)->(1, 37)
    DataMember::Some
      ProperName
       (1, 38)->(1, 39)
      ProperName
       (1, 41)->(1, 42)
   Export::Symbol
    Symbol
     (2, 1)->(2, 4)
   Export::TypSymbol
    Symbol
     (2, 11)->(2, 14)
   Export::Module
    MName
     (2, 23)->(2, 24)
   ImportDecl
    (4, 0)->(4, 6)
    MName
     (4, 7)->(4, 8)
    NULL
    NULL
    (0, 0)->(0, 0)
   ImportDecl
    (5, 0)->(5, 6)
    MName
     (5, 7)->(5, 8)
    NULL
    MName
     (5, 12)->(5, 13)
    (5, 12)->(5, 13)
   ImportDecl
    (6, 0)->(6, 6)
    MName
     (6, 7)->(6, 12)
    NULL
    MName
     (6, 16)->(6, 19)
    (6, 16)->(6, 19)
   ImportDecl
    (7, 0)->(7, 6)
    MName
     (7, 7)->(7, 12)
     Import::Value
      (7, 14)->(7, 15)
      Name
       (7, 14)->(7, 15)
     Import::Class
      (7, 17)->(7, 24)
      ProperName
       (7, 23)->(7, 24)
     Import::Typ
      (8, 1)->(8, 2)
      ProperName
       (8, 1)->(8, 2)
     Import::TypDat
      (8, 4)->(8, 9)
      ProperName
       (8, 4)->(8, 5)
      DataMember::All
       (8, 5)->(8, 9)
     Import::TypDat
      (8, 11)->(8, 17)
      ProperName
       (8, 11)->(8, 12)
      DataMember::Some
        ProperName
         (8, 13)->(8, 14)
        ProperName
         (8, 16)->(8, 17)
     Import::Symbol
      (8, 20)->(8, 23)
      Symbol
       (8, 20)->(8, 23)
     Import::TypSymbol
      (8, 25)->(8, 33)
      Symbol
       (8, 30)->(8, 33)
    NULL
    (8, 33)->(8, 34)
   ImportDecl
    (9, 0)->(9, 6)
    MName
     (9, 7)->(9, 12)
     Import::Value
      (9, 21)->(9, 24)
      Name
       (9, 21)->(9, 24)
    NULL
    NULL
    (9, 24)->(9, 25)
  (1, 0)->(1, 6)
  (2, 26)->(2, 31)
  (1, 13)->(1, 14)
  (2, 24)->(2, 25)
===
