src/lib/snapshots/hemlis_lib__parser__tests__expr_empty_braces_is_app_to_empty_record_not_a_vacuous_update.snap
---
source: src/lib/parser.rs
expression: "p_expr(\"foo {}\")"
---
10 of 10
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       NULL
       Name
        (2, 4)->(2, 7)
     Expr::Record
      (2, 8)->(2, 9)
      (2, 9)->(2, 10)
===
