src/lib/snapshots/hemlis_lib__parser__tests__expr_if.snap
---
source: src/lib/parser.rs
expression: "p_expr(\"if a == 2 then b else c\")"
---
15 of 15
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::IfThenElse
     (2, 4)->(2, 6)
     Expr::Op
      Expr::Ident
       QName
        NULL
        Name
         (2, 7)->(2, 8)
      QOp
       NULL
       Op
        (2, 9)->(2, 11)
      Expr::Number
       Number
        (2, 12)->(2, 13)
     Expr::Ident
      QName
       NULL
       Name
        (2, 19)->(2, 20)
     Expr::Ident
      QName
       NULL
       Name
        (2, 26)->(2, 27)
===
