src/lib/snapshots/hemlis_lib__parser__tests__expr_let_inline.snap
---
source: src/lib/parser.rs
expression: "p_expr(r\"let x = 1 in 2\")"
---
15 of 15
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Let
     (2, 4)->(2, 7)
      LetBinding::Name
       Name
        (2, 8)->(2, 9)
       GuardedExpr::Unconditional
        Expr::Number
         Number
          (2, 12)->(2, 13)
     Expr::Number
      Number
       (2, 17)->(2, 18)
===
